# factuality

./: .dockerignore  .gitignore  README.md  main.py  my_factuality.py  pyproject.toml  requirements.txt  tavily_search_results.json
factuality/: __main__.py
factuality/api/: db.py  gist.py
factuality/claim_splitter/: claim_splitter.py
factuality/fact_check/: fact_check.py
factuality/final_conclusion/: final_conclusion.py
factuality/search/: search.py
factuality/search/tavily/: tavily_search.py
factuality/utils/: defaults.py  options.py  utils.py
