[project]
name = "factuality"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "tavily-python > 0.5.3",
  "openai",
  "python-dotenv",
  "newspaper3k",
  "pytablewriter",
  "structlog",
  "rich",
  "pydantic",
  "lxml[html_clean]",
  "Pillow"
]